<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.tjappx.asistencia.AsistenciaActivity">

    <TextView
        android:id="@+id/txtAnalisisModuleName"
        android:text="@string/analisis_module_name"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imgAnalisisModule"
        app:srcCompat="@drawable/ic_calendar_today_24dp"
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtAnalisisModuleName"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.009" />

    <TextView
        android:id="@+id/txtCboReunionesText"
        android:text="@string/lbl_combo_reuniones_text"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAnalisisModuleName" />

    <Spinner
        android:id="@+id/cboReuniones"
        android:spinnerMode="dropdown"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        android:layout_width="320dp"
        android:layout_height="39dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCboReunionesText"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="118dp"></Spinner>

    <TextView
        android:id="@+id/txtCboCongregacionesText"
        android:text="@string/lbl_combo_congregaciones_text"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/cboReuniones" />

    <Spinner
        android:id="@+id/cboCongregaciones"
        android:spinnerMode="dropdown"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        android:layout_width="320dp"
        android:layout_height="39dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCboCongregacionesText"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"></Spinner>

    <TextView
        android:id="@+id/txtCboSeccionesText"
        android:text="@string/lbl_combo_secciones_text"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/cboCongregaciones"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/cboSecciones"
        android:spinnerMode="dropdown"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        android:layout_width="320dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCboSeccionesText"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"></Spinner>

    <TextView
        android:id="@+id/txtNumeroAsistentesText"
        android:text="@string/lbl_numero_asistentes_text"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/cboSecciones"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:inputType="number"
        android:id="@+id/txtNumeroAsistentes"
        android:textSize="18dp"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroAsistentesText"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCapturarAsistencia"
        app:srcCompat="@drawable/ic_send_24dp"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:layout_marginTop="14dp"
        android:onClick="capturarAsistencia"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroAsistentes"
        android:layout_marginRight="38dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/pbAsistenciaModule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>